tests/compile-fail/interned_struct_incompatibles.stderr
error: `return_ref` option not allowed here
 --> tests/compile-fail/interned_struct_incompatibles.rs:1:19
  |
1 | #[salsa::interned(return_ref)]
  |                   ^^^^^^^^^^

error: `specify` option not allowed here
 --> tests/compile-fail/interned_struct_incompatibles.rs:6:19
  |
6 | #[salsa::interned(specify)]
  |                   ^^^^^^^

error: `no_eq` option not allowed here
  --> tests/compile-fail/interned_struct_incompatibles.rs:11:19
   |
11 | #[salsa::interned(no_eq)]
   |                   ^^^^^

error: `db` option not allowed here
  --> tests/compile-fail/interned_struct_incompatibles.rs:16:19
   |
16 | #[salsa::interned(db = Db)]
   |                   ^^

error: unrecognized option `recover_fn`
  --> tests/compile-fail/interned_struct_incompatibles.rs:21:19
   |
21 | #[salsa::interned(recover_fn = recover)]
   |                   ^^^^^^^^^^

error: `lru` option not allowed here
  --> tests/compile-fail/interned_struct_incompatibles.rs:26:19
   |
26 | #[salsa::interned(lru = 12)]
   |                   ^^^

error: `#[id]` cannot be used with `#[salsa::interned]`
  --> tests/compile-fail/interned_struct_incompatibles.rs:33:5
   |
33 | /     #[id]
34 | |     field: u32,
   | |______________^
